# emu

./: .gitignore  .goreleaser.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  avdmanager.go  emulator.go  go.mod  go.sum  main.go  sdkmanager.go  util.go
.github/workflows/: publish.yaml
autocomplete/: bash_autocomplete  zsh_autocomplete
cmd/emu/: common.go  main.go
scripts/: manpages.sh
