load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "emu",
    srcs = [
        "avdmanager.go",
        "emulator.go",
        "sdkmanager.go",
        "util.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)
